--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,25 @@
+.parent-wrapper{
+  /* display: flex; */
+  /* align-items: center; */
+  /* flex-direction: row; */
+}
 .navigation {
-  position: fixed;
-  top: 0;
   z-index: 3;
   background-color: #ffff;
   border-bottom: 1px solid #dbdbdb;
-  /* width: 100%; */
-  /* height: 6rem;
+  margin-bottom: 8.5rem;
+}
+.status-bar-wrapper{
   display: flex;
-  font-size: 1.4rem;
-  line-height: 1.8rem;
-  color: #262626;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start; */
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid #dbdbdb; */
+}
+.status-bar{
+  position: relative;
+  right: 17.5rem;
+  width: 45rem;
+  height: 10rem;
+  border-radius: 10px;
+  border: 1px solid #dbdbdb;
 }
