--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <div class="navigation">
     <app-nav-bar></app-nav-bar>
 </div>
+<div class="status-bar-wrapper">
+    <div class="status-bar">
+        <app-status-bar></app-status-bar>
+    </div>
+</div>
