--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,14 @@
-.parent-wrapper{
-  /* display: flex; */
-  /* align-items: center; */
-  /* flex-direction: row; */
-}
+/* .parent-wrapper{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+} */
 .navigation {
   z-index: 3;
   background-color: #ffff;
   border-bottom: 1px solid #dbdbdb;
-  margin-bottom: 8.5rem;
+  margin-bottom: 7.5rem;
+ 
 }
 .status-bar-wrapper{
   display: flex;
