--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,12 @@
     <div class="status-bar">
         <app-status-bar></app-status-bar>
     </div>
+    <div class="right-post-bar">
+
+    </div>
+</div>
+<div class="feed-card-wrapper">
+    <div class="feed-card">
+        <app-feed-card></app-feed-card>
+    </div>
 </div>
