--- a/src/app/status-bar/status-bar.component.css
+++ b/src/app/status-bar/status-bar.component.css
@@ -38,7 +38,7 @@ div.horizontal-scroll div {
 .demo-1 img {
   border-radius: 50%;
   object-fit: cover;
-  /* overflow: hidden; */
+  padding: 0.15rem;
   height: 6rem;
   width: 6rem;
   border: 3px solid #e95950;
