--- a/src/app/profile-switch/profile-switch.component.html
+++ b/src/app/profile-switch/profile-switch.component.html
@@ -1,1 +1,11 @@
-<p>profile-switch works!</p>
+<div class="profile-switch-wrapper">
+  <div class="profile-image">
+    <img src="https://www.pngarts.com/files/11/Avatar-PNG-Free-Download.png" alt="" /></div>
+  <div class="name-wrapper">
+    <h5>@abtdprincekumar</h5>
+    <p>Prince Kumar</p>
+  </div>
+  <div class="switchbtn">
+    <p>Switch</p>
+  </div>
+</div>
