--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
     <div class="status-bar">
         <app-status-bar></app-status-bar>
     </div>
-    <div class="right-post-bar">
-
-    </div>
 </div>
+<div class="right-profile-bar">
+        <app-profile-switch></app-profile-switch>
+    </div>
 <div class="feed-card-wrapper">
     <div class="feed-card">
         <app-feed-card></app-feed-card>
