--- a/src/app/status-bar/status-bar.component.html
+++ b/src/app/status-bar/status-bar.component.html
@@ -1,122 +1,10 @@
-<div class="horizontal-scroll">
-  <div class="demo-1">
+<div class="horizontal-scroll" >
+  <div class="demo-1" *ngFor="let status of statusDataList">
     <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
+      src={{status.imageSrc}}
+      alt={{status.imageAlt}}
       srcset=""
     />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName 1</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
-  </div>
-  <div class="demo-1">
-    <img
-      src="https://m.media-amazon.com/images/M/MV5BYjhiNjBlODctY2ZiOC00YjVlLWFlNzAtNTVhNzM1YjI1NzMxXkEyXkFqcGdeQXVyMjQxNTE1MDA@._V1_FMjpg_UX1000_.jpg"
-      alt=""
-      srcset=""
-    />
-    <p>demoName</p>
+    <p>{{status.userName}}</p>
   </div>
 </div>
