--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,12 @@
     </div>
 </div>
 <div class="right-profile-bar">
+    <div class="profile-switch">
         <app-profile-switch></app-profile-switch>
+    </div>
+    <div class="suggestions">
+        <app-suggestions-for-you></app-suggestions-for-you>
+    </div>
     </div>
 <div class="feed-card-wrapper">
     <div class="feed-card">
