--- a/src/app/feed-card/feed-card.component.css
+++ b/src/app/feed-card/feed-card.component.css
@@ -1,3 +1,12 @@
+.border{
+  border: 1px solid #dbdbdb;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  margin-bottom: 2rem;
+}
 .card-header {
   display: flex;
   flex-direction: row;
@@ -15,7 +24,7 @@
 
 .card-header .profile_img {
   height: 3rem;
-  width: 9rem;
+  width: fit-content;
   margin: 1rem;
 }
 .card-header .profile_img img {
