--- a/src/app/suggestions-for-you/suggestions-for-you.component.html
+++ b/src/app/suggestions-for-you/suggestions-for-you.component.html
@@ -1,34 +1,21 @@
 <div class="suggestion">
     <p>Suggestions For You</p>
 </div>
-<div class="suggestions-wrapper">
-  <div class="suggestions-profile-image">
-    <img
-      src="https://www.pngarts.com/files/11/Avatar-PNG-Free-Download.png"
-      alt=""
-    />
-  </div>
-  <div class="profile-name-wrapper">
-    <h5>@abtdprincekumar</h5>
-    <p>Prince Kumar</p>
-  </div>
-  <div class="follow">
-    <p>Follow</p>
-  </div>
-</div>
-<div class="suggestions-wrapper">
-  <div class="suggestions-profile-image">
-    <img
-      src="https://www.pngarts.com/files/11/Avatar-PNG-Free-Download.png"
-      alt=""
-    />
-  </div>
-  <div class="profile-name-wrapper">
-    <h5>@abtdprincekumar</h5>
-    <p>Prince Kumar</p>
-  </div>
-  <div class="follow">
-    <p>Follow</p>
+<div *ngFor="let user of userList">
+  <div class="suggestions-wrapper">
+    <div class="suggestions-profile-image">
+      <img
+        src={{user.imageUrl}}
+        alt={{user.imageUrlAlt}}
+      />
+    </div>
+    <div class="profile-name-wrapper">
+      <h5>{{user.username}}</h5>
+      <p>{{user.Full_name}}</p>
+    </div>
+    <div class="follow">
+      <p>Follow</p>
+    </div>
   </div>
 </div>
 <div class="footer">
