meetmatedata interface for global data transfer to all component

--- a/src/app/status-bar/status-bar.component.html
+++ b/src/app/status-bar/status-bar.component.html
@@ -1,10 +1,9 @@
 <div class="horizontal-scroll" >
-  <div class="demo-1" *ngFor="let status of statusDataList">
+  <div class="demo-1" *ngFor="let status of status">
     <img
-      src={{status.imageSrc}}
-      alt={{status.imageAlt}}
-      srcset=""
+      src={{status.statusImg}}
+      alt={{status.statusbarAlt}}
     />
-    <p>{{status.userName}}</p>
+    <p>{{status.fullName}}</p>
   </div>
 </div>
