--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="status-bar-wrapper">
     <div class="status-bar">
-        <app-status-bar></app-status-bar>
+        <app-status-bar [status]="data"></app-status-bar>
     </div>
 </div>
 <div class="right-profile-bar">
