--- a/src/app/profile-switch/profile-switch.component.html
+++ b/src/app/profile-switch/profile-switch.component.html
@@ -4,6 +4,8 @@
   <div class="name-wrapper">
     <h5>@abtdprincekumar</h5>
     <p>Prince Kumar</p>
+      <!-- <h5>{{switch.userName}}</h5>
+    <p>{{switch.fullName}}</p> -->
   </div>
   <div class="switchbtn">
     <p>Switch</p>
