--- a/src/app/status-bar/status-bar.component.html
+++ b/src/app/status-bar/status-bar.component.html
@@ -1,9 +1,9 @@
 <div class="horizontal-scroll" >
-  <div class="demo-1" *ngFor="let status of status">
+  <div class="profile_img" *ngFor="let status of status">
     <img
       src={{status.statusImg}}
       alt={{status.statusbarAlt}}
     />
-    <p>{{status.fullName}}</p>
+    <p>{{status.userName}}</p>
   </div>
 </div>
