--- a/src/app/status-bar/status-bar.component.css
+++ b/src/app/status-bar/status-bar.component.css
@@ -18,24 +18,26 @@ div.horizontal-scroll div {
   display: inline-block;
   text-align: center;
   padding: 0 1rem;
-  margin: 0rem 0.8rem;
+  margin: 0rem 1.8rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   position: relative;
   top: 1.5rem;
 }
-.demo-1 {
+.profile_img {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /* margin-right: 3rem; */
 }
-.demo-1 p {
-  font-size: 1rem;
+.profile_img p {
+  font-size: 1.2rem;
   color: black;
+  font-weight: 500;
 }
-.demo-1 img {
+.profile_img img {
   border-radius: 50%;
   object-fit: cover;
   padding: 0.15rem;
