--- a/src/app/profile-switch/profile-switch.component.html
+++ b/src/app/profile-switch/profile-switch.component.html
@@ -1,12 +1,14 @@
 <div class="profile-switch-wrapper">
   <div class="profile-image">
-    <img src="https://www.pngarts.com/files/11/Avatar-PNG-Free-Download.png" alt="" /></div>
-  <div class="name-wrapper">
+    <img src="https://s.yimg.com/ny/api/res/1.2/_9cxvN3sUtbvORHBCgQPzg--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTQyNw--/https://s.yimg.com/os/creatr-uploaded-images/2022-11/41dd6c70-5ac9-11ed-9b1f-d433e456385f" alt="" />
+     <div class="name-wrapper">
     <h5>@abtdprincekumar</h5>
     <p>Prince Kumar</p>
       <!-- <h5>{{switch.userName}}</h5>
     <p>{{switch.fullName}}</p> -->
   </div>
+  </div>
+
   <div class="switchbtn">
     <p>Switch</p>
   </div>
