--- a/src/app/feed-card/feed-card.component.html
+++ b/src/app/feed-card/feed-card.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="comments-wrapper">
-            <p>{{feedData.userName}} {{feedData.comments}}</p>
+            <p><b>{{feedData.userName}} </b>{{feedData.comments}}</p>
             <p>View all {{feedData.commentCount}} comments</p>
         </div>
         <div class="time-wrapper">
