--- a/src/app/suggestions-for-you/suggestions-for-you.component.css
+++ b/src/app/suggestions-for-you/suggestions-for-you.component.css
@@ -10,9 +10,20 @@
   display: flex;
   justify-content: space-between;
 }
+.suggestions-profile-image{
+  display: flex;
+
+}
 
 .suggestions-profile-image img {
   width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 .follow {
   font-size: 1rem;
