--- a/src/app/feed-card/feed-card.component.css
+++ b/src/app/feed-card/feed-card.component.css
@@ -77,7 +77,7 @@ div.time-wrapper p {
   font-size: 1.4rem;
 }
 @media screen and (max-width: 800px) {
-  .border{
+  .border {
     margin-top: 2rem;
   }
   .card-header {
@@ -91,16 +91,39 @@ div.time-wrapper p {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-}
+  }
 
   .username p {
     font-size: 2.5rem;
   }
-  .feedMore + svg {
-    font-size: 30px;
+  .feedMore svg[aria-label="More options"] {
+    margin-right: 1.5rem;
+    transform: scale(2);
+    -webkit-transform: scale(2);
+    -moz-transform: scale(2);
+    -ms-transform: scale(2);
+    -o-transform: scale(2);
   }
 
-  div.comments-wrapper p,div.time-wrapper p {
-    font-size: 2rem;
+  div.comments-wrapper p,
+  div.time-wrapper p {
+    font-size: 2.2rem;
+  }
+  .card-footer .lcss-wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 15rem;
+    margin-bottom: 2rem;
+  }
+
+  .like svg[aria-label="Like"],
+  .comment svg[aria-label="Comment"],
+  .share svg[aria-label="Share Post"] {
+    transform: scale(1.6);
+    -webkit-transform: scale(1.6);
+    -moz-transform: scale(1.6);
+    -ms-transform: scale(1.6);
+    -o-transform: scale(1.6);
   }
 }
