--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -129,7 +129,7 @@ div.logo a {
 /*  responsive */
 @media screen and (max-width: 800px) {
   .nav-bar {
-    height: 5rem;
+    height: 7rem;
   }
   .nav-bar-logo img {
     display: none;
@@ -142,10 +142,14 @@ div.logo a {
     width: 100%;
     position: relative;
     left: 0rem;
+    top: 0.5rem;
   }
   .logo .svg_name {
     display: flex;
     flex-direction: row;
+  }
+  .no-underline > span {
+    font-size: 5rem;
   }
   .navigation-search-container {
     display: none;
@@ -156,18 +160,29 @@ div.logo a {
   div.logo svg[aria-label="New Story"] {
     display: block;
     align-items: center;
-    font-size: 4rem;
-    margin-left: 0.5rem;
+    font-size: 10rem;
+    transform: scale(2);
+    margin-right: 1rem;
+    margin-left: 3rem;
     margin-top: 2rem;
+    -webkit-transform: scale(2);
+    -moz-transform: scale(2);
+    -ms-transform: scale(2);
+    -o-transform: scale(2);
   }
   div.logo svg[aria-label="Messenger"] {
     display: flex;
     justify-content: flex-end;
-    font-size: 4rem;
+    margin-right: 1.5rem;
+    transform: scale(2);
     position: absolute;
     right: 1rem;
     top: 2rem;
-  }
+    -webkit-transform: scale(2);
+    -moz-transform: scale(2);
+    -ms-transform: scale(2);
+    -o-transform: scale(2);
+}
 }
 
 @media screen and (min-width: 992px) {
