--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div class="navigation">
-    <app-nav-bar></app-nav-bar>
+    <div class="nav">
+        <app-nav-bar></app-nav-bar>
+    </div>
+    <div class="bottom-nav-bar ">
+        <app-bottom-nav-bar></app-bottom-nav-bar>
+    </div>
 </div>
 <div class="status-bar-wrapper">
     <div class="status-bar">
