--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,14 +21,14 @@
 </div>
 <div class="feed-card-wrapper">
     <div class="feed-card">
-        <app-feed-card [feed]="data"></app-feed-card>
+        <app-feed-card></app-feed-card>
     </div>
 </div>
 
-
+<!--
 <div class="json">
 
     <div class="temp"  *ngFor="let d of data2.data.user.edge_owner_to_timeline_media.edges; let i=index">
         <p >{{d.node.id |json}} </p>
     </div>
-</div>
+</div> -->
