read more dynamic int to date and verified tick for static data done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
 </div>
 <div class="feed-card-wrapper">
     <div class="feed-card">
-        <app-feed-card></app-feed-card>
+        <app-feed-card [feed]="data"></app-feed-card>
     </div>
 </div>
 
