some dynamic data and static data with  Error:ERROR DOMException: Failed to execute 'setAttribute' on 'Element': '}}' is not a valid attribute name.

--- a/src/app/suggestions-for-you/suggestions-for-you.component.html
+++ b/src/app/suggestions-for-you/suggestions-for-you.component.html
@@ -1,7 +1,7 @@
 <div class="suggestion">
   <p>Suggestions For You</p>
 </div>
-<div *ngFor="let user of suggestions.data.user.edge_chaining.edges">
+<!-- <div *ngFor="let user of suggestions.data.user.edge_chaining.edges">
   <div class="suggestions-wrapper">
     <div class="suggestions-profile-image">
       <img
@@ -29,17 +29,15 @@
               class=""
             ></path></svg>
           </span>
-
-        <!-- {{isverified}} -->
       </div>
     </div>
     <div class="follow">
       <p>Follow</p>
     </div>
   </div>
-</div>
+</div> -->
 <!-- For static data -->
-<!-- <div *ngFor="let user of SuggestionsForYou">
+<div *ngFor="let user of SuggestionsForYou">
   <div class="suggestions-wrapper">
     <div class="suggestions-profile-image">
       <img
@@ -55,7 +53,7 @@
       <p>Follow</p>
     </div>
   </div>
-</div> -->
+</div>
 <div class="footer">
   <div class="footer-items">
     <ul>
