--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,30 @@
 <div class="navigation">
-    <div class="nav">
-        <app-nav-bar></app-nav-bar>
-    </div>
-    <div class="bottom-nav-bar ">
-        <app-bottom-nav-bar></app-bottom-nav-bar>
-    </div>
+  <div class="nav">
+    <app-nav-bar></app-nav-bar>
+  </div>
+  <div class="bottom-nav-bar">
+    <app-bottom-nav-bar></app-bottom-nav-bar>
+  </div>
 </div>
 <div class="status-bar-wrapper">
-    <div class="status-bar">
-        <app-status-bar [status]="data"></app-status-bar>
-    </div>
+  <div class="status-bar">
+    <app-status-bar [status]="data"></app-status-bar>
+  </div>
 </div>
 <div class="right-profile-bar">
-    <div class="profile-switch">
-        <app-profile-switch [switch]="data"></app-profile-switch>
-    </div>
-    <div class="suggestions">
-        <app-suggestions-for-you [SuggestionsForYou]="data"></app-suggestions-for-you>
-    </div>
+  <div class="profile-switch">
+    <app-profile-switch [switch]="data"></app-profile-switch>
+  </div>
+  <div class="suggestions">
+    <app-suggestions-for-you
+      [SuggestionsForYou]="data"
+    ></app-suggestions-for-you>
+  </div>
 </div>
 <div class="feed-card-wrapper">
-    <div class="feed-card">
-        <app-feed-card [feed]="data"></app-feed-card>
-    </div>
+  <div class="feed-card">
+    <app-feed-card [feed]="data"></app-feed-card>
+  </div>
 </div>
 
 <!--
