statusbar working fine

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="status-bar-wrapper">
   <div class="status-bar">
-    <app-status-bar [status]="data"></app-status-bar>
+    <app-status-bar [statusData]="data"></app-status-bar>
   </div>
 </div>
 <div class="right-profile-bar">
