--- a/src/app/status-bar/status-bar.component.html
+++ b/src/app/status-bar/status-bar.component.html
@@ -1,30 +1,21 @@
 <div class="horizontal-scroll">
   <div class="profile_img" *ngFor="let status of statusData">
-    <a
-      class="text-danger"
-      type="button"
-      class="btn"
-      (click)="openPopup(status._id,status.statusImg,status.statusbarAlt,status.userName)"
-    >
+    <a class="btn text-danger" type="button"
+      (click)="openPopup(status._id,status.statusImg,status.statusbarAlt,status.userName)">
       <img src="{{ status.statusImg }}" alt="{{ status.statusbarAlt }}" />
       <p>{{ status.userName }}</p>
     </a>
   </div>
 </div>
 
-<div
-  class="modal"
-  tabindex="-1"
-  role="dialog"
-  [ngStyle]="{ display: displayStyle }"
->
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{ display: displayStyle }">
   <div class="modal-wrapper" role="document" (click)="closePopup()">
     <div class="modal-content">
       <div class="modal-header">
         <h4>{{username}}</h4>
-        </div>
+      </div>
       <div class="modal-body">
-         <img src={{imgSrc}} alt="{{'username'+imgAlt}}" srcset="">
+        <img src={{imgSrc}} alt="{{'username'+imgAlt}}" srcset="">
       </div>
     </div>
   </div>
